# Deep-Poo

./: .gitignore  COMMERCIAL_LICENSE.md  Cargo.toml  LICENSE  README.md  cleanup_redundancy.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  mdbook.yml
apps/colon_sim/: Cargo.toml  README.md
apps/colon_sim/src/: autopilot.rs  lib.rs  prelude.rs  probe.rs  systems.rs
assets/: colon_probe.glb
capture_utils/: Cargo.toml  README.md
capture_utils/src/: lib.rs
capture_utils/tests/: recorder_sink.rs
crates/colon_sim/: Cargo.toml
docs/: app_guide.md  book.toml  burn_dataset.md  burn_patch.md  cli.md  train_harness_plan.md  training.md  weak_points.md
docs/book/: SUMMARY.md
docs/src/: SUMMARY.md  cli.md  training.md  tui.md
inference/: README.md
inference/src/: lib.rs
inference/tests/: integration_checkpoint.rs
logs/: train_status.json
scripts/: dev-local.sh
scripts/windows/: train_hp.ps1
sim_core/: README.md
sim_core/src/: hooks.rs  lib.rs  runtime.rs
src/: autopilot.rs  balloon_control.rs  burn_model.rs  hud.rs  lib.rs  main.rs  polyp.rs  probe.rs  service.rs  tunnel.rs  vision.rs  vision_interfaces.rs
src/app/: autopilot.rs  balloon_control.rs  bootstrap.rs  hud.rs  (+6 more)
tests/: overlay_schema.rs  registry_smoke.rs  seed_consistency.rs  seed_e2e_positions.rs  train_harness.rs  vision_inference.rs
tools/: Cargo.toml  README.md
vision_core/: Cargo.toml  README.md
vision_core/src/: capture.rs  interfaces.rs  lib.rs
vision_runtime/: Cargo.toml  README.md
vision_runtime/src/: lib.rs
vision_runtime/tests/: smoke.rs
(+45 files in other folders)
