[package]
name = "vision_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
bevy = { version = "0.17.3", default-features = false, features = ["bevy_core_pipeline"] }
