[package]
name = "colon_sim_app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
bevy = "0.17.3"
bevy_mesh = "0.17.3"
bevy_rapier3d = { version = "0.32", features = ["simd-stable", "debug-render-3d"] }
sim_core = { package = "cortenforge-sim-core", version = "0.1.0" }
vision_core = { package = "cortenforge-vision-core", version = "0.1.0" }
vision_runtime = { package = "cortenforge-vision-runtime", version = "0.1.0" }
data_contracts = { package = "cortenforge-data-contracts", version = "0.1.0" }
models = { package = "cortenforge-models", version = "0.1.0" }
anyhow = "1.0"
rand = "0.8"
smallvec = "1.13"
